linear-gradient for "transparent" background removed comments from template code

--- a/q-bot.html
+++ b/q-bot.html
@@ -34,37 +34,40 @@
   <!-- Page Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center" class="w-75">
+      <div class="col-lg-12 text-center w-75">
         <img src="img/q-bot-logo.png" class="w-25 mt-5">
         <h4 class="mt-5">A CHATBOT MADE FOR HEALTH CARE GIVERS</h4>
         <img src="img/q-bot-hero.jpg" class="w-75 mt-3">
       </div>
     </div>
 
-    <div class="row mt-5 card-deck">
+    <div class="row mt-5">
+      <div class="card-deck w-75 col-lg-12 text-center">
       <div class="card">
         <img src="img/q-bot-1.png" class="card-img-top">
         <div class="card-body bg-warning">
           <h4 class="card-title">More patients</h4>
-          <p class="card-text">Two-way communication is shown to reduce no-shows and increase cancellation and rescheduling rates.</p>
+          <p class="card-text text-secondary">Two-way communication is shown to reduce no-shows and increase cancellation and rescheduling rates.</p>
         </div>
       </div>
       <div class="card">
         <img src="img/q-bot-2.png" class="card-img-top">
         <div class="card-body bg-warning">
           <h4 class="card-title">Easy</h4>
-          <p class="card-text">Automated management of appointments in your EMR reduces personnel costs and staff stress.</p>
+          <p class="card-text text-secondary">Automated management of appointments in your EMR reduces personnel costs and staff stress.</p>
         </div>
       </div>
       <div class="card">
         <img src="img/q-bot-3.png" class="card-img-top">
         <div class="card-body bg-warning">
           <h4 class="card-title">Expandable</h4>
-          <p class="card-text">Send customized information and follow-up questions, scheduled or on demand.</p>
+          <p class="card-text text-secondary">Send customized information and follow-up questions, scheduled or on demand.</p>
         </div>
       </div>
     </div>
   </div>
+
+</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
