removed col status

--- a/q-bot.html
+++ b/q-bot.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="row mt-5">
-      <div class="card-deck w-75 col-lg-12 text-center">
+      <div class="card-deck">
       <div class="card">
         <img src="img/q-bot-1.png" class="card-img-top">
         <div class="card-body bg-warning">
