--- a/q-bot.html
+++ b/q-bot.html
@@ -34,14 +34,14 @@
   <!-- Page Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center w-75">
+      <div class=" text-center m-5">
         <img src="img/q-bot-logo.png" class="w-25 mt-5">
         <h4 class="mt-5">A CHATBOT MADE FOR HEALTH CARE GIVERS</h4>
         <img src="img/q-bot-hero.jpg" class="w-75 mt-3">
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row m-5">
       <div class="card-deck">
       <div class="card">
         <img src="img/q-bot-1.png" class="card-img-top">
