--- a/q-bot.html
+++ b/q-bot.html
@@ -67,6 +67,17 @@
     </div>
   </div>
 
+  <div class="row m-5 text-center">
+  <form>
+    <div class="form-group">
+      <label for="inputEmail1">Get an email when we have news to share</label>
+      <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We don't share your email with anyone else.</small>
+    </div>
+    <button type="submit" class="btn btn-warning">Submit</button>
+  </form>
+</div>
+
 </div>
 
   <!-- Bootstrap core JavaScript -->
