--- a/q-bot.html
+++ b/q-bot.html
@@ -34,7 +34,7 @@
   <!-- Page Content -->
   <div class="container">
     <div class="row">
-      <div class=" text-center m-5">
+      <div class="text-center m-5">
         <img src="img/q-bot-logo.png" class="w-25 mt-5">
         <h4 class="mt-5">A CHATBOT MADE FOR HEALTH CARE GIVERS</h4>
         <img src="img/q-bot-hero.jpg" class="w-75 mt-3">
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="row m-5 text-center">
+  <div class="form-row justify-content-center">
   <form>
     <div class="form-group">
       <label for="inputEmail1">Get an email when we have news to share</label>
