--- a/q-bot.html
+++ b/q-bot.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="form-row justify-content-center">
+  <div class="form-row text-center justify-content-center">
   <form>
     <div class="form-group">
       <label for="inputEmail1">Get an email when we have news to share</label>
