--- a/q-bot.html
+++ b/q-bot.html
@@ -67,15 +67,9 @@
     </div>
   </div>
 
-  <div class="form-row text-center justify-content-center">
-  <form>
-    <div class="form-group">
-      <label for="inputEmail1">Get an email when we have news to share</label>
-      <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We don't share your email with anyone else.</small>
-    </div>
-    <button type="submit" class="btn btn-warning">Submit</button>
-  </form>
+  <div class="text-center">
+  <p>Are you interested or have a question?</p>
+  <p><a href="mailto:info@oddquirk.com?Subject=Q-bot" target="_top">Email us</a></p>
 </div>
 
 </div>
