Added padding below the email form

--- a/q-bot.html
+++ b/q-bot.html
@@ -37,7 +37,7 @@
       <div class="text-center m-5">
         <img src="img/q-bot-logo.png" class="w-25 mt-5">
         <h4 class="mt-5">A CHATBOT MADE FOR HEALTH CARE GIVERS</h4>
-        <img src="img/q-bot-hero.jpg" class="w-75 mt-3">
+        <img src="img/q-bot-hero.jpg" class="img-fluid mt-3">
       </div>
     </div>
 
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="text-center">
+  <div class="text-center pb-5">
   <p>Are you interested or have a question?</p>
   <p><a href="mailto:info@oddquirk.com?Subject=Q-bot" target="_top">Email us</a></p>
 </div>
