--- a/tools.html
+++ b/tools.html
@@ -37,7 +37,7 @@
       <div class="col-lg-12 text-left">
         <h1 class="mt-5">Tabletträknare</h1>
         <div class="embed-responsive">
-          <iframe class="embed-responsive-item" src="http://104.248.21.97:3838/tRaknare/"></iframe>
+          <iframe class="embed-responsive-item" src="http://104.248.21.97:3838/tRaknare/" onload="this.style.height=this.contentDocument.body.scrollHeight +'px';"></iframe>
         </div>
       </div>
     </div>
