--- a/tools.html
+++ b/tools.html
@@ -36,8 +36,8 @@
     <div class="row">
       <div class="col-lg-12 text-left">
         <h1 class="mt-5">Tabletträknare</h1>
-        <div class="embed-responsive">
-          <iframe class="embed-responsive-item" src="http://104.248.21.97:3838/tRaknare/" style="height:800px"></iframe>
+        <div class="embed-responsive embed-responsive-1by1">
+          <iframe class="embed-responsive-item " src="http://104.248.21.97:3838/tRaknare/"></iframe>
         </div>
       </div>
     </div>
