--- a/q-bot.html
+++ b/q-bot.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="text-center m-5">
         <img src="img/q-bot-logo.png" class="w-25 mt-5">
-        <h4 class="mt-5">A CHATBOT MADE FOR HEALTH CARE GIVERS</h4>
+        <h4 class="mt-5">REDUCE NO-SHOWS AND LATE CANCELLATIONS</h4>
         <img src="img/q-bot-hero.jpg" class="img-fluid mt-3">
       </div>
     </div>
