added top padding

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <!-- Page Content -->
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">We make Q-bot</h1>
+    <div class="row pt-5">
+      <div class="col-lg-12 text-center pt-5">
+        <h1 class="mt-5 pt-5">We make Q-bot</h1>
         <p class="lead">A CHATBOT MADE FOR HEALTH CARE GIVERS</p>
       </div>
     </div>
