--- a/tools.html
+++ b/tools.html
@@ -67,7 +67,8 @@
           <div class="row">
             <div class="col-sm-6 well pr-4">
               <div class="row">
-                <textarea class="form-control" v-on:input="parseInput" v-model="textInput" placeholder="Klistra in text eller skriv" rows="5"></textarea>
+                <textarea class="form-control" v-on:input="parseInput" v-model="textInput" placeholder="Klistra in text eller skriv
+				(Inga data sparas)" rows="5"></textarea>
               </div>
               <div class="row">
                 <p> Patienten tar <code>{{dailyDose}}</code> tabletter varje dag</br>
@@ -128,12 +129,12 @@
           var app = new Vue({
             el: '#app',
             data: {
-              textInput: '',
-              dose: 1,
-              times: 3,
-              package: 25,
-              packnum: 1,
-              refills: 1,
+				textInput: '',
+              	dose: 1,
+              	times: 3,
+              	package: 25,
+              	packnum: 1,
+              	refills: 1,
 				prescrDate: moment().format('YYYY-MM-DD')
             },
 
@@ -153,6 +154,7 @@
             },
             methods: {
               parseInput: function(event) {
+				  prescrDate = (\d{4}-\d{2}-\d{2});
                 dose_regex = /(\d+)-?(\d*)(\s+(tabl|kaps))/;
                 times_regex = /(\d+)\s+gång/;
                 timeofday_regex = /(till|på|kl)\s+(morgonen|frukost|lunch|kvällen|natten|\d{2}:\d{2})*/g; // g is needed here!;
