added meta descriptions

--- a/q-bot.html
+++ b/q-bot.html
@@ -15,8 +15,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Reduce no-shows and late cancellations with Q-bot, a chatbot made for health care givers">
+  <meta name="author" content="Quirk">
 
   <title>Quirk - Q-bot</title>
 
