--- a/tools.html
+++ b/tools.html
@@ -15,7 +15,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Tablet calculator, BMI calculator and other fine tools. Tabletträknare, BMI-räknare och andra fina verktyg">
   <meta name="author" content="Quirk">
   <title>Quirk - Tools</title>
 
