--- a/tools.html
+++ b/tools.html
@@ -61,15 +61,9 @@
       <div id="app" class="container-fluid">
     <div class="row">
       <div class="col-lg-12 text-left mt-5">
-		  
-		  
 		  <div>
 		    <b-card no-body>
-		      <b-tabs pills card no-fade
-		content-class="mt-5"
-		nav-class="h3"
-		active-nav-item-class="bg-warning">
-		
+		      <b-tabs pills card no-fade nav-class="h3" active-nav-item-class="bg-warning">
 		        <b-tab title="Tabletträknare" active>
 		          <b-card-text>
 				            <div class="row">
