--- a/tools.html
+++ b/tools.html
@@ -67,7 +67,7 @@
 		        <b-tab title="Tabletträknare" active>
 		          <b-card-text>
 				            <div class="row justify-content-center" >
-				             <!-- <div class="col-8"> -->
+				             <div class="col">
 				                <div class="row">
 				                  <textarea class="form-control" v-on:input="parseInput" v-model="textInput" placeholder="Klistra in text eller skriv (Inga data sparas)" rows="5"></textarea>
 				                </div>
@@ -108,7 +108,7 @@
 				                  <b-form-input type="date" v-model="prescrDate" type="date" placeholder="Välj ett datum">
 				                  </b-input-group>
 				            </div>
-			              <!-- </div> -->
+			             </div>
 							
 				</b-card-text>		
 		        </b-tab>
