--- a/tools.html
+++ b/tools.html
@@ -115,7 +115,7 @@
 		        <b-tab title="BMI-räknare">
 		          <b-card-text>
 	  			<div class="row justify-content-center">
-	             <div class="col-8">
+	             <div class="col">
 	                <div class="row d-flex justify-content-center">
 	  				   <h2>{{bmi}}</h2>
 	  		</div>
