--- a/tools.html
+++ b/tools.html
@@ -67,7 +67,7 @@
 		        <b-tab title="Tabletträknare" active>
 		          <b-card-text>
 				            <div class="row justify-content-center" >
-				             <div class="col-sm-8">
+				             <div class="col-xs-8">
 				                <div class="row">
 				                  <textarea class="form-control" v-on:input="parseInput" v-model="textInput" placeholder="Klistra in text eller skriv (Inga data sparas)" rows="5"></textarea>
 				                </div>
@@ -115,7 +115,7 @@
 		        <b-tab title="BMI-räknare">
 		          <b-card-text>
 	  			<div class="row justify-content-center">
-	             <div class="col-sm-8">
+	             <div class="col-xs-8">
 	                <div class="row d-flex justify-content-center">
 	  				   <h2>{{bmi}}</h2>
 	  		</div>
