--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="container">
     <div class="row pt-5">
       <div class="col-lg-12 text-center pt-5">
-        <h1 class="mt-5 pt-5">We make Q-bot</h1>
+        <h1 class="mt-5 pt-5">We used to make Q-bot</h1>
         <p class="lead">A CHATBOT MADE FOR HEALTH CARE GIVERS</p>
       </div>
     </div>
