--- a/navigation.html
+++ b/navigation.html
@@ -10,9 +10,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="q-bot.html">Q-bot</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="tools.html">Tools</a>
         </li>
