Shorten date text

--- a/tools.html
+++ b/tools.html
@@ -105,7 +105,7 @@
  </div>
  
  <div class="col">
-  <b-input-group size="sm" class="mt-2" prepend="Utskrivet den">
+  <b-input-group size="sm" class="mt-2" prepend="den">
   
 				                  <b-form-input size="sm" type="date" v-model="prescrDate" type="date" placeholder="Välj ett datum">
 							  </b-form-input>
