--- a/tools.html
+++ b/tools.html
@@ -81,13 +81,13 @@
 				                </b-input-group>
 								
 								<div class="row">
-								  <div class="col">
+								  <div class="col-sm">
 				                  <b-input-group size="sm" class="mt-2" prepend="Fick">
 				                  <b-input-group-text slot="append">förpackningar</b-input-group-text>
 				                  <b-form-input type="number" v-model="packnum"  :min="1" :max="15"></b-form-input>
 							  </b-input-group>
 							  </div>
-							  <div class="col">
+							  <div class="col-sm">
 			                  <b-input-group size="sm" class="mt-2" prepend="med">
 				                  <b-input-group-text slot="append">st. i varje förp.</b-input-group-text>
 				                  <b-form-input type="number" v-model="package" :min="10" :max="400" :step="5">
@@ -96,15 +96,15 @@
 					  </div>
 
 								<div class="row">
-								  <div class="col">
+								  <div class="col-sm">
 				                  <b-input-group size="sm" class="mt-2">
-				                  <b-input-group-text slot="append">{{refills}} uttag</b-input-group-text>
+				                  <b-input-group-text slot="append">uttag</b-input-group-text>
 				                  <b-form-input type="number" v-model="refills" :min="1" :max="10">
 				                  </b-form-input type="number">
 				                  </b-input-group>
  </div>
  
- <div class="col">
+ <div class="col-sm">
   <b-input-group size="sm" class="mt-2" prepend="den">
   
 				                  <b-form-input size="sm" type="date" v-model="prescrDate" type="date" placeholder="Välj ett datum">
@@ -126,12 +126,12 @@
 	  				   <h2>{{bmi}}</h2>
 	  		</div>
 					<div class="row">
-						<div class="col">  
+						<div class="col-sm">  
 	                <b-input-group append="kg" class="mt-2" >
                   <b-form-input type="number" v-model="weight" :min="10" :max="400">{{weight}}</b-form-input>
 					</b-input-group>
 	                 </div>
-					<div class="col">  
+					<div class="col-sm">  
 	                <b-input-group append="cm" class="mt-2" >
 					<b-form-input type="number" v-model="height" :min="10" :max="250">{{height}}</b-form-input>
 					</b-input-group>
