Shorten input text

--- a/tools.html
+++ b/tools.html
@@ -75,7 +75,7 @@
 				                </div>
 								
 				                <b-input-group size="sm" class="mt-2" prepend="Patienten tar">
-				                  <b-input-group-text slot="append">tabletter per dygn</b-input-group-text>
+				                  <b-input-group-text slot="append">tabl. per dygn</b-input-group-text>
 				                  <b-form-input type="number" v-model="times" :min="1" :step="1">
 				                  </b-form-input type="number">
 				                </b-input-group>
