--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   gtag('config', 'UA-727326-24');
 </script>
 
+<script data-ad-client="ca-pub-5483289546839505" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
